--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,11 +6,19 @@
 
 // подключения компонентов страницы
 @import "./components/header";
+@import "./components/table";
 
-// тестовые стили, удалите их
-.page__body {
+// // тестовые стили, удалите их
+// .page__body {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   height: var(--vh);
+// }
+
+.main__table-wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: var(--vh);
+  min-height: 425px;
 }
