feat: add header component

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,11 @@
 <header class="header">
-  <div class="container"></div>
+  <nav class="header__nav">
+    <a class="header__logo" href="#">Stock Center</a>
+    <p class="header__text">Items in stock</p>
+    <div class="header__burger burger">
+      <div class="burger__line_1"></div>
+      <div class="burger__line_2"></div>
+      <div class="burger__line_3"></div>
+    </div>
+  </nav>
 </header>
