--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,9 +16,34 @@
 //   height: var(--vh);
 // }
 
+.main {
+  margin-top: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .main__table-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 425px;
+}
+
+@media screen and (max-width: 468px) {
+  .main {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+
+  .site-container {
+    overflow: initial;
+  }
+
+  .container {
+    max-width: 100%;
+    margin: 0;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
