--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 // подключения компонентов страницы
 @import "./components/header";
 @import "./components/table";
+@import "./components/modal";
 
 // // тестовые стили, удалите их
 // .page__body {
