--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,48 +1,23 @@
-.modal {
-  display: none;
+.modal  {
   width: 30rem;
   height: 26rem;
+  display: none;
+  margin: 0 auto;
+  background-color: #fff;
 }
 
-.modal-overlay .modal--open {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-  z-index: 9999;
-  opacity: 0;
-  animation: ani 0.3s forwards;
-
-  .modal--open {
-    display: block;
-  }
+.modal .modal--open {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 798px) {
-  .modal-overlay .modal--open {
-    .modal {
-      width: 18rem;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-      padding-bottom: 1rem;
-    }
-  }
-}
-
-@keyframes ani {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
+  .modal {
+    width: 18rem;
+    height: auto;
+    padding-bottom: 1rem;
   }
 }
