--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,14 +9,6 @@
 @import "./components/table";
 @import "./components/modal";
 
-// // тестовые стили, удалите их
-// .page__body {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   height: var(--vh);
-// }
-
 .main {
   margin-top: 2rem;
   padding-top: 1rem;
@@ -30,6 +22,28 @@
   flex-direction: column;
   align-items: center;
   min-height: 425px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 9999;
+  opacity: 0;
+  animation: ani 0.3s forwards;
+}
+
+@keyframes ani {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 468px) {
