feat: end up operating with opening modal popup

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,3 +1,4 @@
-<div class="modal">
+<div class="modal" data-target="first">
+  <button class="modal__close">Close</button>
   <h2>modal</h2>
 </div>
