--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,16 +24,36 @@
   min-height: 425px;
 }
 
-.overlay {
-  position: absolute;
+.main__container {
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.75);
   z-index: 9999;
-  opacity: 0;
-  animation: ani 0.3s forwards;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.75);
+  overflow-y: auto;
+  overflow-x: hidden;
+  text-align: center;
+	opacity: 0;
+	visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.main__container::before {
+	content: '';
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%;
+}
+
+.main__container.is-open {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 @keyframes ani {
