--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,17 +1,18 @@
 .modal  {
   width: 30rem;
   height: 26rem;
-  display: none;
-  margin: 0 auto;
   background-color: #fff;
+  border-radius: 6px;
+  position: relative;
+	display: none;
+	margin: 50px auto;
+	vertical-align: middle;
+	cursor: default;
+	text-align: left;
 }
 
-.modal .modal--open {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+.modal.modal-open {
   display: block;
-  transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 798px) {
