feat: start operating on form

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,8 @@
 <div class="modal" data-target="first">
-  <button class="modal__close">Close</button>
-  <h2>modal</h2>
+  <header class="modal__header">
+    <h2>New Item</h2>
+    <button class="modal__close">X</button>
+  </header>
+
+  @include('../partials/form.html')
 </div>
