--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/header";
 @import "./components/table";
 @import "./components/modal";
+@import "./components/form";
 
 .main {
   margin-top: 2rem;
